# csvls

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  collection.txt
src/: include.hpp  main.cpp
src/aliases_and_concepts/: concept.hpp  using.hpp
src/argument_handlers/: ArgumentHandler.cpp  ArgumentHandler.hpp  Option.hpp  OrderedUnique.hpp  build.sh  test  test.cpp
src/argument_processors/: ArgumentProcessor.hpp
src/assembler/: Assembler.cpp  Assembler.hpp  DirWrapper.hpp
src/checker/: ArgumentChecker.cpp  ArgumentChecker.hpp  ArgumentProcessor.hpp  help.hpp
src/cli/: ArgumentHandler.cpp  ArgumentHandler.hpp  ArgumentParser.cpp  ArgumentParser.hpp  Option.hpp  OrderedUnique.hpp  build.sh  test  test.cpp
src/csv_writer/: CsvWriter.cpp  CsvWriter.hpp
src/lamdas_handling/: LambdaHandler.cpp  LambdaHandler.hpp
